layouts/partials/css/page.css
/* Entire page */

::-moz-selection {
  color: {{ .Get "header_text" }};
  background-color: {{ .Get "accent" }};
}

::selection {
  color: {{ .Get "body_text" }};
  background-color: {{ .Get "accent" }};
}

/* Apply hover animation on anything that changes text or background color */
:hover, :focus, :active, .active {
  -o-transition: color ease-in-out 0.3s, background-color ease-in-out 0.3s;
  -webkit-transition: color ease-in-out 0.3s, background-color ease-in-out 0.3s;
  -moz-transition: color ease-in-out 0.3s, background-color ease-in-out 0.3s;
  transition: color ease-in-out 0.3s, background-color ease-in-out 0.3s;
}

#site-container {
  margin: auto;
  background-color: {{ .Get "main_bg" }};
  color: {{ .Get "body_text" }};
  width: 100%;
	margin: 0px auto;
}

#site-container div {
  margin: 0;
}

body {
  background-color: {{ .Get "page_bg" }};
  background-attachment: fixed;
  {{ if (not (eq (.Get "background_src") "")) }}
  background-image: url("{{ .Get "background_src" }}");
  background-repeat: {{ .Get "background_tile" }};
  background-size: {{ .Get "background_fit" }};
  {{ end }}
}

/* Site header */

#site-header ::-moz-selection, .tag ::-moz-selection {
  color: {{ .Get "body_text" }};
  background-color: {{ .Get "main_bg" }};
}

#site-header ::selection, .tag ::selection {
  color: {{ .Get "body_text" }};
  background-color: {{ .Get "main_bg" }};
}

header a:hover, header a:active, header a:focus {
  text-decoration: underline;
  color: {{ .Get "body_text" }};
}

header a:link, header a:visited, #site-header header a:hover, #site-header header a:active {
  color: {{ .Get "body_text" }};
  text-decoration: none;
}

#site-header {
  background-color: {{ .Get "accent" }};
  color: {{ .Get "header_text" }};
}

#site-header header {
  padding: 1rem 2rem;
}

#site-title, #site-tagline {
  font-weight: bold;
  display:inline-block;
  color: {{ .Get "header_text" }};
}

#site-title {
  font-size: 3rem;
  padding-bottom: 0.5rem;
}

#site-tagline {
  font-size: 1.2rem;
  padding-top: 0.5rem;
  border-top: 1px solid {{ .Get "header_text" }};
}

code {
  color: {{ .Get "body_text" }};
  font-weight: bold;
  overflow-wrap: break-word;
}

pre {
  padding: 1.2rem;
  background-color: {{ .Get "alt_bg" }};
  font-size: 1rem;
  overflow-x: scroll;
  margin-bottom: 1em;
}

pre code {
  font-weight: normal;
}

#main-container {
  margin: 2rem 0.5rem;
  padding: 15px 20px 20px;
}

main a:hover, aside a:hover {
  text-decoration: underline;
}

main a, main a:hover {
  color: {{ .Get "accent" }};
}

main header a:hover, main header a:active, main header a:focus {
  color: {{ .Get "body_text" }};
}

/* Sidebar */

aside {
  padding-bottom: 20px;
}

aside a:link, aside a:visited {
  color: {{ .Get "body_text" }};
  text-decoration: none;
}

aside a:hover, aside a:active, aside a:focus {
  text-decoration: underline;
}

/* Footer */

footer {
  padding: 0.5rem 1rem;
  background-color: {{ .Get "alt_bg" }};
  border-top: 3px solid #999999;
}

footer p {
  margin-bottom: 0;
}

footer a {
  color: {{ .Get "body_text" }};
  text-decoration: underline;
}

footer a:hover {
  color: {{ .Get "alt_body_text" }};
}

#social-icons {
  font-size: 1.5rem;
}

#social-icons a:link,
#social-icons a:visited,
#social-icons a:active,
#social-icons a:focus {
  color: {{ .Get "alt_body_text" }};
  text-decoration: none;
}

#social-icons a:hover {
  color: {{ .Get "accent" }};
}

#attribution {
  font-size: 0.8rem;
  font-style: italic;
}

.post-banner {
  margin-left: auto;
  margin-right: auto;
  display: block;
  position: relative;
  background-size: cover; 
  background-repeat: no-repeat;
  height: 400px;
}

.no-post-banner {
  padding-top: 5rem !important; 
}

